--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script src="../dist/dialog.umd.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link href="../dist/dialog.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
