test: unit tests for Dialog

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <button class="btn btn-light"
-            onclick='dialog.alert("Alert Message", function(e) { alert("Clicked ok"); });'>
+            onclick='dialog.alert("Alert Message");'>
             Alert
         </button>
         <button class="btn btn-light"
