ci: optimize gh-pages scripts

--- a/site/index.html
+++ b/site/index.html
@@ -1,8 +1,17 @@
 <html>
     <head>
-        <script src="../dist/dialog.umd.js"></script>
+        <!-- dev -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
         <link href="../dist/dialog.css" rel="stylesheet" type="text/css" />
+        <script src="../dist/dialog.umd.js"></script>
+        <!-- /dev -->
+
+        <!-- prod
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+        <link href="https://unpkg.com/@bndynet/dialog/dist/dialog.css" rel="stylesheet" type="text/css" />
+        <script src="https://unpkg.com/@bndynet/dialog/dist/dialog.umd.js"></script>
+        -->
+
         <style>
             body {
                 padding: 15px;
