--- a/site/index.html
+++ b/site/index.html
@@ -105,6 +105,53 @@
                 <button class="btn btn-light" onclick='dialog.notify("Message" + Date.now(), "warning")'>
                     Notify Warning
                 </button>
+
+                <hr />
+                <button id="btn-loading-page" class="btn btn-light">
+                    Page Loading
+                </button>
+                <button id="btn-loading-element" class="btn btn-light">
+                    Data Loading
+                </button>
+                <div id="data" class="box with-border">
+                    This is a placeholder for loading data.
+                </div>
+                <div id="data1" class="box with-border">
+                    This is a placeholder for loading data. This is a placeholder for loading data. This is a placeholder for loading data.
+                    This is a placeholder for loading data.
+                    This is a placeholder for loading data.
+                    This is a placeholder for loading data.
+                    This is a placeholder for loading data.
+                </div>
+                <script>
+                    document.getElementById("btn-loading-page").addEventListener("click", function() {
+                        dialog.loading({
+                            color: "#356ba5",
+                            text: "加载中...",
+                        });
+                        setTimeout(function() {
+                            dialog.loading(false);
+                        }, 3000);
+                    });
+                    document.getElementById("btn-loading-element").addEventListener("click", function() {
+                        var d = dialog.loading({
+                            targetEl: document.querySelector("#data"),
+                            text: "Loading...",
+                            color: "#356ba5",
+                            inline: true,
+                        });
+                        setTimeout(function() {
+                            d.hide();
+                        }, 3000);
+                    });
+                    document.getElementById("btn-loading-element").addEventListener("click", function() {
+                        var d = dialog.loadingFor("#data1");
+                        setTimeout(function() {
+                            d.hide();
+                        }, 3000);
+                    });
+                </script>
+
             </section>
         </main>
 
