fix(modal): can not open the uri starts with // or ftp://

--- a/site/index.html
+++ b/site/index.html
@@ -92,7 +92,7 @@
                 <button class="btn btn-light" onclick='dialog.confirm("Title", "Confirm Message", function(e) { alert("Clicked ok"); });'>
                     Confirm with Title
                 </button>
-                <button class="btn btn-light" onclick='dialog.iframe("http://bndy.net")'>
+                <button class="btn btn-light" onclick='dialog.iframe("https://bndy.net")'>
                     Open external url
                 </button>
 
