--- a/site/index.html
+++ b/site/index.html
@@ -130,7 +130,7 @@
                 <script>
                     document.getElementById("btn-loading-page").addEventListener("click", function() {
                         dialog.loading({
-                            color: "#356ba5",
+                            // color: "#356ba5",
                             text: "加载中...",
                         });
                         setTimeout(function() {
@@ -141,7 +141,7 @@
                         var d = dialog.loading({
                             targetEl: document.querySelector("#data"),
                             text: "Loading...",
-                            color: "#356ba5",
+                            // color: "#356ba5",
                             inline: true,
                         });
                         setTimeout(function() {
