--- a/site/index.html
+++ b/site/index.html
@@ -62,7 +62,7 @@
                         </li>
                         <li class="nav-item">
                             <select id="ddlThemes" onchange="changeTheme(this)">
-                                <option value="">Choose a theme</option>
+                                <option value="">Choose a dialog theme </option>
                             </select>
                         </li>
                     </ul>
