fix(iframe): iframe dialog cannot be set height

--- a/site/index.html
+++ b/site/index.html
@@ -101,7 +101,7 @@
                 </button>
                 <br />
                 <br />
-                <button class="btn btn-light" onclick='dialog.iframe("https://bndy.net")'>
+                <button class="btn btn-light" onclick='dialog.iframe("https://bndy.net", "My Blog", {height: "40%"})'>
                     Open external url
                 </button>
                 <button id="btn-openelement" class="btn btn-light">
